add get_image demo function
